@@ -23,7 +23,7 @@ AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_HEADERS([src/ksi/config.h])
 AC_CANONICAL_TARGET
-
+AM_MAINTAINER_MODE
 
 # Before making a release, the LTVER string should be modified. The
 # string is of the form c:r:a. Follow these instructions sequentially:
@@ -118,6 +118,8 @@ if test ! -z "$with_openssl" ; then
 	LDFLAGS="-L$with_openssl/lib $LDFLAGS"
 fi
 
+AC_CHECK_LIB([crypto], [SHA256_Init], [], [AC_MSG_FAILURE([Could not find OpenSSL 0.9.8+ libraries.])])
+
 AC_ARG_WITH(hash-provider,
 [  --with-hash-provider=<openssl|commoncrypto>       build using library for hash functions (default: openssl)],
 :, with_hash_provider=openssl)
@@ -126,11 +128,11 @@ if test "x$with_hash_provider" = "xcommoncrypto" ; then
 	AC_CHECK_HEADER([CommonCrypto/CommonCrypto.h])
 elif test "x$with_hash_provider" = "xopenssl" ; then
 	AC_DEFINE_UNQUOTED(KSI_HASH_IMPL, KSI_IMPL_OPENSSL, [Use OpenSSL.])
+    AC_CHECK_FUNCS([EVP_sha3_256 EVP_sha3_384 EVP_sha3_512 EVP_sm3])
 else
 	AC_MSG_ERROR([*** Unknown hash provider.])
 fi
 
-AC_CHECK_LIB([crypto], [SHA256_Init], [], [AC_MSG_FAILURE([Could not find OpenSSL 0.9.8+ libraries.])])
 AC_CHECK_LIB([curl], [curl_easy_init], [], [AC_MSG_FAILURE([Could nod find Curl libraries.])])
 
 AC_ARG_WITH(cafile,
@@ -195,14 +197,6 @@ if test -z "$with_cafile" -a -z "$with_cadir"; then
 		AC_MSG_ERROR([*** Neither CA certificate bundle file nor directory is specified and also Trust Evaluation Engine is disabled.]);
 	fi
 fi
-
-# Reduce warnings generated by OpenSSL under OSX
-case "${target_os}" in
-	darwin*)
-		CFLAGS="$CFLAGS -mmacosx-version-min=10.5"
-		LDFLAGS="$LDFLAGS -mmacosx-version-min=10.5"
-		;;
-esac
 
 # To ensure compatibility with Microsoft compiler.
 CFLAGS+=" -Wdeclaration-after-statement"
