@@ -45,7 +45,6 @@ libksi_la_SOURCES = \
 	hash_openssl.c \
 	hash_commoncrypto.c \
 	hmac.h \
-	impl/hmac_impl.h\
 	hmac.c \
 	http_parser.h \
 	http_parser.c \
